# motocoop

./: .dockerignore  .env.example  LICENSE  QUICKSTART.md  README.md  check-setup.ps1  docker-compose.yml  pyproject.toml  run-api.ps1  run-tests.ps1  start-dev.ps1
docker/: Dockerfile
scripts/: __init__.py  init_db.py
src/: __init__.py
src/application/: __init__.py
src/application/centrais/: cadastrar_central.py
src/application/clientes/: __init__.py
src/application/corridas/: __init__.py  aceitar_corrida.py  cancelar_corrida.py  concluir_corrida.py  recusar_corrida.py  solicitar_corrida.py
src/application/fila/: __init__.py  despachar_corrida.py  gerenciar_fila.py
src/application/motoristas/: __init__.py
src/application/shared/: __init__.py
src/application/usuarios/: cadastrar_usuario.py
src/config/: __init__.py  logging.py  settings.py
src/domain/: __init__.py
src/domain/centrais/: __init__.py  entities.py  repositories.py
src/domain/clientes/: __init__.py
src/domain/corridas/: __init__.py  entities.py  repositories.py
src/domain/motoristas/: __init__.py
src/domain/shared/: __init__.py  exceptions.py  types.py  value_objects.py
src/domain/usuarios/: entities.py  repositories.py
src/infrastructure/: __init__.py
src/infrastructure/cache/: __init__.py
src/infrastructure/database/: __init__.py
src/infrastructure/database/models/: __init__.py
src/infrastructure/database/repositories/: __init__.py
src/infrastructure/geolocation/: __init__.py
src/infrastructure/whatsapp/: __init__.py
src/infrastructure/whatsapp/handlers/: __init__.py
src/presentation/: __init__.py
src/presentation/api/: __init__.py  main.py
tests/e2e/: __init__.py
tests/integration/: test_api.py
tests/unit/application/centrais/: test_cadastrar_central.py
tests/unit/application/corridas/: test_aceitar_corrida.py  test_cancelar_corrida.py  (+3 more)
(+7 files in other folders)
